feat: change to static class

--- a/Packages/net.koyashiro.udonlist/Runtime/Koyashiro.UdonList.Runtime.asmdef
+++ b/Packages/net.koyashiro.udonlist/Runtime/Koyashiro.UdonList.Runtime.asmdef
@@ -1,10 +1,6 @@
 {
     "name": "Koyashiro.UdonList.Runtime",
-    "references": [
-        "VRC.SDK3",
-        "VRC.SDKBase",
-        "UdonSharp.Runtime"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
