feat: enhance static typing

--- a/Packages/net.koyashiro.udonlist/Runtime/Koyashiro.UdonList.Runtime.asmdef
+++ b/Packages/net.koyashiro.udonlist/Runtime/Koyashiro.UdonList.Runtime.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "Koyashiro.UdonList.Runtime",
-    "references": [],
+    "references": [
+        "UdonSharp.Runtime"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
