--- a/Packages/net.koyashiro.udonlist/package.json
+++ b/Packages/net.koyashiro.udonlist/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/koyashiro"
+    "url": "https://github.com/koyashiro/udon-list"
   },
   "vpmDependencies": {
     "com.vrchat.udonsharp": "1.1.5"
