--- a/Packages/net.koyashiro.udonlist/Tests/Runtime/Koyashiro.UdonList.Tests.Runtime.asmdef
+++ b/Packages/net.koyashiro.udonlist/Tests/Runtime/Koyashiro.UdonList.Tests.Runtime.asmdef
@@ -2,6 +2,7 @@
     "name": "Koyashiro.UdonList.Tests.Runtime",
     "references": [
         "UdonSharp.Runtime",
+        "Koyashiro.UdonTest.Runtime",
         "Koyashiro.UdonList.Runtime"
     ],
     "includePlatforms": [],
