--- a/Packages/net.koyashiro.udonlist/package.json
+++ b/Packages/net.koyashiro.udonlist/package.json
@@ -26,6 +26,8 @@
   ],
   "url": "https://github.com/koyashiro/udon-list/releases/download/v0.4.1/net.koyashiro.udonlist-0.4.1.zip",
   "vpmDependencies": {
-    "com.vrchat.udonsharp": "1.1.5"
+    "com.vrchat.udonsharp": "1.1.5",
+    "net.koyashiro.udonexception": "0.1.0",
+    "net.koyashiro.udontest": "0.1.0"
   }
 }
