chore!: rename the assembly
BREAKING CHANGE: rename the assembly from `Koyashiro.UdonList.Runtime` to `Koyashiro.UdonList`

--- a/Packages/net.koyashiro.udonlist/Runtime/Koyashiro.UdonList.asmdef
+++ b/Packages/net.koyashiro.udonlist/Runtime/Koyashiro.UdonList.asmdef
@@ -1,9 +1,8 @@
 {
-    "name": "Koyashiro.UdonList.Tests.Runtime",
+    "name": "Koyashiro.UdonList",
     "references": [
         "UdonSharp.Runtime",
-        "Koyashiro.UdonTest",
-        "Koyashiro.UdonList.Runtime"
+        "Koyashiro.UdonException.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
