--- a/Packages/net.koyashiro.udonlist/Tests/Runtime/Koyashiro.UdonList.Tests.asmdef
+++ b/Packages/net.koyashiro.udonlist/Tests/Runtime/Koyashiro.UdonList.Tests.asmdef
@@ -1,8 +1,9 @@
 {
-    "name": "Koyashiro.UdonList.Runtime",
+    "name": "Koyashiro.UdonList.Tests",
     "references": [
         "UdonSharp.Runtime",
-        "Koyashiro.UdonException.Runtime"
+        "Koyashiro.UdonTest",
+        "Koyashiro.UdonList"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
