--- a/Packages/net.koyashiro.udonlist/Runtime/Koyashiro.UdonList.asmdef
+++ b/Packages/net.koyashiro.udonlist/Runtime/Koyashiro.UdonList.asmdef
@@ -1,8 +1,7 @@
 {
     "name": "Koyashiro.UdonList",
     "references": [
-        "UdonSharp.Runtime",
-        "Koyashiro.UdonException.Runtime"
+        "UdonSharp.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
