--- a/Packages/net.koyashiro.udonlist/package.json
+++ b/Packages/net.koyashiro.udonlist/package.json
@@ -26,7 +26,6 @@
   ],
   "url": "https://github.com/koyashiro/udon-list/releases/download/v0.11.0/net.koyashiro.udonlist-0.11.0.zip",
   "vpmDependencies": {
-    "com.vrchat.udonsharp": "1.1.5",
-    "net.koyashiro.udonexception": "0.2.0"
+    "com.vrchat.udonsharp": "1.1.5"
   }
 }
