--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "com.vrchat.udonsharp": {
-      "version": "1.1.5"
+      "version": "1.1.6"
     },
     "com.vrchat.clientsim": {
       "version": "1.2.2"
@@ -15,7 +15,7 @@
   },
   "locked": {
     "com.vrchat.udonsharp": {
-      "version": "1.1.5",
+      "version": "1.1.6",
       "dependencies": {
         "com.vrchat.worlds": "3.1.x"
       }
@@ -27,7 +27,8 @@
       }
     },
     "com.vrchat.base": {
-      "version": "3.1.10"
+      "version": "3.1.10",
+      "dependencies": {}
     },
     "com.vrchat.clientsim": {
       "version": "1.2.2",
