--- a/Packages/net.koyashiro.udonlist/package.json
+++ b/Packages/net.koyashiro.udonlist/package.json
@@ -27,5 +27,6 @@
   "url": "https://github.com/koyashiro/udon-list/releases/download/v0.14.2/net.koyashiro.udonlist-0.14.2.zip",
   "vpmDependencies": {
     "com.vrchat.udonsharp": "1.1.7"
-  }
+  },
+  "repo": "https://vpm.koyashiro.net/repos.json"
 }
